permisos en cajero

--- a/Proyecto2/SmileSoft/gestion_cobros/templates/mostrar_tratamientos_cobrar.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/mostrar_tratamientos_cobrar.html
@@ -109,12 +109,12 @@
                             {%if caja_cerrada%}
                                 <a type="submit" href="/cobros/msj_caja_cerrada/{{id_paciente}}/{{user.numero_documento}}" class="btn btn-success btn-block txt-white">
                                     <i class="bi bi-check2-square"></i>
-                                    Cobrar
+                                    Procesar cobro
                                 </a>
                             {%else%}
                                 <a type="submit" href="/cobros/verificar_datos_cita/{{persona.numero_documento}}/{{menor_edad}}" class="btn btn-success btn-block txt-white">
                                     <i class="bi bi-check2-square"></i>
-                                    Cobrar
+                                    Procesar cobro
                                 </a>
                             {%endif%}
 
