--- a/Proyecto2/SmileSoft/gestion_cobros/templates/mostrar_caja_previa.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/mostrar_caja_previa.html
@@ -1,7 +1,7 @@
 {%extends 'panel_control/base.html'%}
 
 {%block content%}
-<!-- {%if perms.gestion_administrativo.add_cargo%} -->
+{%if perms.gestion_cobros.add_cobrocontado%}
     <div class="col-12 col-md-6 offset-md-3">
         <div class="card">
             <div>
@@ -121,14 +121,14 @@
                         <i class="bi bi-check2-circle"></i>
                         Listo
                     </button>
-                    <button type="submit" target="_blank" class="btn btn-outline-primary">
+                    <a button type="submit" href="/cobros/pdf_movimiento_caja" target="_blank" class="btn btn-outline-primary">
                         <i class="bi bi-file-earmark-pdf"></i>
                         Generar PDF
-                    </button>
+                    </a>
                 </div>
                 <br>
             </div>
         </div>
     </div>
-<!-- {%endif%} -->
+{%endif%}
 {%endblock%}
