Correccion de base de datos

--- a/Proyecto2/SmileSoft/gestion_cobros/templates/mensajes/msj_caja_cerrada3.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/mensajes/msj_caja_cerrada3.html
@@ -22,6 +22,11 @@
                         <i class="bi bi-check2-square"></i>
                         OK
                     </button>
+
+                    <a class="btn btn-success" style="margin: 10px;" href="/cobros/mostar_caja_previa">
+                        <i class="bi bi-card-checklist"></i>
+                        Ver informe
+                    </a>
                 </div>
             </div>
         </div>
