--- a/Proyecto2/SmileSoft/gestion_cobros/templates/mostrar_caja_previa.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/mostrar_caja_previa.html
@@ -117,10 +117,10 @@
                 <br>
                 <br>
                 <div class="text-center"> 
-                    <button type="button" class="btn btn-outline-success" onclick="hisrory.back()">
+                    <a type="button" class="btn btn-outline-success" href="/panel_control/inicio/">
                         <i class="bi bi-check2-circle"></i>
                         Listo
-                    </button>
+                    </a>
                     <a button type="submit" href="/cobros/pdf_movimiento_caja" target="_blank" class="btn btn-outline-primary">
                         <i class="bi bi-file-earmark-pdf"></i>
                         Generar PDF
