cambio1 ingreso por rango

--- a/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
+++ b/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
@@ -458,6 +458,7 @@
                                                     <li><a class="dropdown-item" href="/reportes/reporte_ingresos/">• Ingresos En General </li></a>
                                                     <li><a class="dropdown-item" href="/reportes/ingreso_diario/">• Ingreso Diario</li></a>
                                                     <li><a class="dropdown-item" href="/reportes/ingreso_mensual/">• Ingreso Mensual</li></a>
+                                                    <li><a class="dropdown-item" href="/reportes/ingreso_fecha/">• Ingreso entre Fechas</li></a>
                                                     
                                                 
                                               </ul>
