--- a/Proyecto2/SmileSoft/gestion_reporte/templates/tratamiento_mas_solicitado.html
+++ b/Proyecto2/SmileSoft/gestion_reporte/templates/tratamiento_mas_solicitado.html
@@ -33,7 +33,26 @@
                 </h2>
                 
                 </center>
-             
+                
+             {% comment %}    <form  class="form-inline" method="POST">
+                    {% csrf_token %}
+
+                    <div class="d-flex justify-content-between">
+                            
+                        <label class="m-0 col-md-6 text-right">Rango de Fechas:</label>
+                                <input type="date" name="f"  class="form-control bg-light border-0 small "  aria-label="search" value="{{request.POST.filtro}}" >
+                                <input type="date" name="q"   class="form-control bg-light border-0 small "  aria-label="search" value="{{request.POST.busqueda}}" >
+                            <div class="input-group-append">
+                                <button  class="btn btn-outline-primary my-2 my-sm-0" type="submit" value="{{request.POST.buscar}}">
+                                    <!--ICONO LUPA-->
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="14" height="14" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
+                                        <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0z"/>
+                                    </svg>
+                                </button>
+                            </div>
+                    </div>
+                </form>
+              {% endcomment %}
                 <hr>
                 <div  class="card-body"> 
              
