Implementacion inicial de Visualizar gasto

--- a/Proyecto2/SmileSoft/gestion_cobros/templates/gastos/listar_gastos.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/gastos/listar_gastos.html
@@ -73,7 +73,7 @@
 								<!-- <td>{{ persona.es_paciente }}</td> -->
 								<td>
 									{%if perms.gestion_administrativo.change_persona%}
-									<a class="btn btn-primary" href="#">
+									<a class="btn btn-primary" href="/cobros/visualizar_gasto/{{g.id_comprobante}}">
 										<i class="bi-pencil-square"></i>
 										Visualizar
 									</a>
