correccion de permisos

--- a/Proyecto2/SmileSoft/panel_control/templates/panel_control/ortodoncia.html
+++ b/Proyecto2/SmileSoft/panel_control/templates/panel_control/ortodoncia.html
@@ -86,7 +86,7 @@
                          
                                 <span class="cover"><span class="more">Precios &rarr;</span>
                            
-                            <span class="title">Cuotas de 5 pagos| </span>
+                            <span class="title">2 secciones| </span>
                       
                     </div>
                     <div class="col-sm-6 col-md-4">
@@ -99,7 +99,7 @@
                         </p>
                              <span class="cover"><span class="more">Precios &rarr;</span>
                            
-                            <span class="title">Cuotas de hasta 10 pagos| </span>
+                            <span class="title">De 12 a 24 secciones| </span>
                     </div>
                     <div class="col-sm-6 col-md-4">
                         <h3 class="text-center">Ortodoncia Convencional <br>  <FONT COLOR="blue"> con brackets <b>estéticos(zafiro)</b></font></h3>
@@ -113,7 +113,7 @@
                             </p>
                              <span class="cover"><span class="more">Precios &rarr;</span>
                            
-                            <span class="title">Cuotas de  3 pagos| </span>
+                            <span class="title">De 12 a 18 secciones| </span>
                     </div>
                   
                 </div>
