--- a/Proyecto2/SmileSoft/gestion_cobros/templates/ver_detalle_cobro.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/ver_detalle_cobro.html
@@ -1,7 +1,7 @@
 {%extends 'panel_control/base.html'%}
 
 {% block content %}
-	<!-- {%if perms.gestion_administrativo.view_especialistasalud%} -->
+{%if perms.gestion_cobros.add_cobrocontado%}
 		<div class="container" style="width: 70%;">
 			<div class="card">
 				<div class="card-body">
@@ -72,5 +72,5 @@
 				</div>
 			</div>
 		</div>
-	<!-- {% endif %} -->
+	{% endif %}
 {% endblock%}
