--- a/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
+++ b/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
@@ -267,7 +267,8 @@
                                                     </strong>
                                                 
                                                     <li> <a class="dropdown-item" href="/tratamiento/listar_paciente2">• Seleccionar Paciente</a> </li> 
-                                                 
+                                                  {%endif%}  
+                                                  {%if perms.webapp.add_usuario%}
                                                     <li><a class="dropdown-item" href="/tratamiento/listar_tratamientos_pendientes/">• Tratamientos a realizar</a></li>
                                                  {%endif%}   
                                                   <!--Debe tener un permiso solo para el rol Odontologo -->
@@ -311,7 +312,7 @@
                                                   {%if perms.gestion_agendamiento.view_cita%}
                                                   <li><a class="dropdown-item" href="/agendamiento/listado_citas">• Citas Reservadas</li></a>
                                                   {% endif %}
-                                                  {%if perms.gestion_agendamiento.add_cita%}
+                                                  {%if perms.gestion_agendamiento.view_cita%}
                                                   <li><a class="dropdown-item" href="/agendamiento/pacientes_cita">• Pacientes | Reservar una cita</li></a>
                                                   {% endif %}
                                                   
