--- a/Proyecto2/SmileSoft/gestion_reporte/templates/tratamiento_mas_solicitado.html
+++ b/Proyecto2/SmileSoft/gestion_reporte/templates/tratamiento_mas_solicitado.html
@@ -100,7 +100,7 @@
                                     data:{
                                     datasets: [{
                                                 data: {{li}},
-                                    backgroundColor: ['red','yellow','pink','purple','blue','orange'],
+                                    backgroundColor: ['red','yellow','pink','purple','blue','orange','skyblue','green','brown'],
                                     label: 'Cantidades'}],
                                     {% comment %} labels: ['R','A','b','c','d']}, {% endcomment %}
                                     labels: indices},
