permisos, en la parte de cajero

--- a/Proyecto2/SmileSoft/gestion_cobros/templates/gastos/visualizar_gasto.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/gastos/visualizar_gasto.html
@@ -1,7 +1,7 @@
 {%extends 'panel_control/base.html'%}
 
 {%block content%}
-<!-- {%if perms.gestion_administrativo.add_cargo%} -->
+{%if perms.gestion_administrativo.add_persona%}
     <div class="col-12 col-md-6 offset-md-3">
             <div class="card">
                 <br>
@@ -147,5 +147,5 @@
                 </div>
             </div>
     </div>
-<!-- {%endif%} -->
+{%endif%} 
 {%endblock%}
