--- a/Proyecto2/SmileSoft/gestion_cobros/templates/facturacion/visualizar_datos_factura.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/facturacion/visualizar_datos_factura.html
@@ -1,7 +1,7 @@
 {%extends 'panel_control/base.html'%}
 
 {%block content%}
-<!-- {%if perms.gestion_administrativo.add_cargo%} -->
+{%if perms.gestion_agendamiento.add_cita%}
     <div class="col-12 col-md-6 offset-md-3">
             <div class="card">
                 <br>
