--- a/Proyecto2/SmileSoft/gestion_cobros/templates/facturacion/cambiar_estado_factura.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/facturacion/cambiar_estado_factura.html
@@ -1,7 +1,7 @@
 {%extends 'panel_control/base.html'%}
 
 {%block content%}
-<!-- {%if perms.gestion_administrativo.add_cargo%} -->
+{%if perms.gestion_cobros.add_cobrocontado%}
     <div class="col-12 col-md-6 offset-md-3">
             <div class="card">
                 <br>
@@ -111,5 +111,5 @@
                 </div>
             </div>
     </div>
-<!-- {%endif%} -->
+{%endif%}
 {%endblock%}
