cambio de nombre a Insumos| permisos en Odontologo

--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos_asignados.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos_asignados.html
@@ -69,12 +69,12 @@
                                         <td >{{tratamiento.nombre_tratamiento}}</td>
                                         <td >{{tratamiento.precio}}</td>
                                         <td>
-                                 
+                                           
                                                 <a href="/agendamiento/agendar_cita/{{paciente.id_paciente}}/{{tratamiento.codigo_tratamiento}}" class="btn btn-primary">
                                                     <i class="bi bi-calendar2-week"></i> 
                                                     Agendar una cita 
                                                 </a>
-                                         
+                                               
                                             {%if perms.gestion_historial_clinico.add_historialclinico%}
                                                 <a href="/tratamiento/eliminar_tratamiento_asignado/{{id_paciente_tratamiento}}/{{paciente.numero_documento}}" class="btn btn-danger btnEliminacion">
                                                     <i class="bi-trash" ></i> 
@@ -111,13 +111,15 @@
                             &nbsp;
                         {%endif%}
                         &nbsp;
-                        {%if tratamientos_asignados%}
-                            <a type="submit" href="/cobros/presupuesto_pdf/{{paciente.id_paciente}}" target="_blank" class="btn btn-secondary btn-block txt-primary">
-                                <i class="bi bi-printer"></i>
-                                Presupuesto
-                            </a>
-                        
-                            &nbsp;
+                        {%if perms.webapp.add_usuario%}
+                            {%if tratamientos_asignados%}
+                                <a type="submit" href="/cobros/presupuesto_pdf/{{paciente.id_paciente}}" target="_blank" class="btn btn-secondary btn-block txt-primary">
+                                    <i class="bi bi-printer"></i>
+                                    Presupuesto
+                                </a>
+                            
+                                &nbsp;
+                            {%endif%}
                         {%endif%}
                         &nbsp;
                         <a class="btn btn-secondary" onclick = "history.back()">
