--- a/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
+++ b/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
@@ -413,7 +413,7 @@
                                              <li class="nav-item dropdown">
                                                <a class="nav-link dropdown-toggle" href="insumo" id="navbarDropdown"
                                                role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                               Inventario</a>
+                                               Insumos</a>
                                                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                                  <strong class="dropdown-header" style="color:blue; font-size:16px;" >
                                                        Registro de Insumos
