Correccion de Lista de facturas

--- a/Proyecto2/SmileSoft/gestion_cobros/templates/listar_facturas.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/listar_facturas.html
@@ -69,8 +69,8 @@
 													</a>
 												{%else%}
 													<a href="/cobros/cambiar_estado_factura/{{f.factura.id_factura}}" type="buttom" class="btn btn-primary">
-														<i class="bi bi-pencil-square"></i>
-														Cambiar estado
+														<i class="bi bi-view-list"></i>
+														Visualizar
 													</a>
 												{%endif%}
 											</td>
