--- a/Proyecto2/SmileSoft/gestion_cobros/templates/facturacion/cambiar_estado_factura.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/facturacion/cambiar_estado_factura.html
@@ -8,13 +8,13 @@
                 <center>  
                     <h1 style="font-family: Bodoni;">
                         <b>
-                            Cambiar estado de factura
+                            Datos de la factura
                         </b> 
                     </h1> 
                 </center>
-                    <div class="container mt-3 text-center">
+                    <!-- <div class="container mt-3 text-center">
                         <i> ¡ Modifique el estado de la factura ! </i>
-                    </div>
+                    </div> -->
                 <div class="card-body">
                     <form method="POST">
                         {% csrf_token %}
@@ -81,10 +81,10 @@
                         </div>
 
                         <div class="d-flex justify-content-center">
-                            <button class="btn btn-primary" type="submit" style="margin: 10px;">
+                            <!-- <button class="btn btn-primary" type="submit" style="margin: 10px;">
                                 <i class="bi-save"></i>
                                 Guardar
-                            </button>
+                            </button> -->
                             <a onclick="history.back()" class="btn btn-danger" style="margin: 10px;">
                                 <i class="bi-x-circle"></i>
                                 Atrás
